@@ -1005,6 +1005,7 @@ APR_FLAG_HEADERS(
     tpfio.h		\
     unistd.h		\
     unix.h		\
+    uuid.h		\
     arpa/inet.h		\
     kernel/OS.h		\
     net/errno.h		\
@@ -1029,7 +1030,8 @@ APR_FLAG_HEADERS(
     sys/types.h		\
     sys/uio.h		\
     sys/un.h		\
-    sys/wait.h)
+    sys/wait.h          \
+    uuid/uuid.h)
 
 # IRIX 6.5 has a problem in <netinet/tcp.h> which prevents it from
 # being included by itself.  Check for <netinet/tcp.h> manually,
@@ -1081,6 +1083,8 @@ AC_SUBST(timeh)
 AC_SUBST(unistdh)
 AC_SUBST(signalh)
 AC_SUBST(sys_waith)
+AC_SUBST(uuidh)
+AC_SUBST(uuid_uuidh)
 AC_SUBST(pthreadh)
 AC_SUBST(semaphoreh)
 
@@ -1818,10 +1822,14 @@ echo "${nl}Checking for OS UUID Support..."
 osuuid="0"
 AC_CHECK_FUNCS(uuid_create, [osuuid="1"
     AC_DEFINE([HAVE_UUID_CREATE], 1, [Define if libc has uuid_create])], [])
+
+AC_CHECK_FUNCS(uuid_generate, [osuuid="1"
+    AC_DEFINE([HAVE_UUID_GENERATE], 1, [Define if libc has uuid_generate])], [])
+
 AC_CHECK_LIB(uuid, uuid_generate, 
     [osuuid="1"
      APR_ADDTO(LIBS,-luuid)
-     AC_DEFINE([HAVE_LIBUUID], 1, [Define if libuuid is present])], [])
+     AC_DEFINE([HAVE_UUID_GENERATE], 1, [Define if libuuid is present])], [])
 AC_SUBST(osuuid)
 
 
