@@ -1,5 +1,7 @@
 Changes for APR 1.2.0
 
+   *) Add support for uuid_generate on OS X 10.4. [Paul Querna]
+
    *) Include the C preprocessor flags in --cflags for pkg-config.
       [Paul Querna]
 
